--- a/index.html
+++ b/index.html
@@ -15,32 +15,16 @@
 
   </head>
   <body>
-    <h1 class="text-center main-heading">Welcome to The Colors Game</h1>
-
-		<h3 class="text-center main-heading random-color">The box is the color: </h3>
-		<br />
-		<div class="container">
+		<div class="container text-center">
+    	<h1 class="text-center main-heading">Welcome to The Colors Game</h1>
+			<div class="row">
+				<button class="btn btn-default reset-button">Reset</button><h3 class="text-center main-heading random-color">The box is the color: </h3>
+				<br />
+			</div>
 
 			<div class="row">
-				<div class="wrapper col-sm-8 col-xs-offset-2">
-					<div class="col-sm-4 box" id="box1">
-
-					</div>
-					<div class="col-sm-4 box" id="box2">
-
-					</div>
-					<div class="col-sm-4 box" id="box3">
-
-					</div>
-					<div class="col-sm-4 box" id="box4">
-
-					</div>
-					<div class="col-sm-4 box" id="box5">
-
-					</div>
-					<div class="col-sm-4 box" id="box6">
-
-					</div>
+				<div class="box-wrapper col-sm-8 col-xs-offset-2">
+					<!-- Boxes produced in app.js -->
 				</div> <!-- Wrapper End -->
 			</div> <!-- Row End -->
 		</div>
