--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container text-center">
     	<h1 class="text-center main-heading">Welcome to The Colors Game!</h1>
 			<div class="row">
-				<button class="btn btn-default reset-button" type="submit">Reset</button><h3 class="text-center main-heading random-color">The box is the color: </h3>
+				<button class="btn btn-default reset-button" type="submit">Reset</button><h3 class="text-center main-heading random-color">The box is the color: </h3><span id="attempts-left"></span>
 				<br />
 			</div>
 
