--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 		<div class="container text-center">
     	<h1 class="text-center main-heading">Welcome to The Colors Game!</h1>
 			<div class="row">
+				<div class="col-sm-2 col-sm-offset-5">
+					<ul class="nav nav-tabs nav-justified">
+						<li role="presentation" class="active" id="hex"><a href="#">Hex</a></li>
+						<li role="presentation" id="rgb"><a href="#">RGB</a></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="row">
 				<button class="btn btn-default reset-button" type="submit">Reset</button><h3 class="text-center main-heading random-color">The box is the color: </h3><span id="attempts-left"></span>
 				<br />
 			</div>
